# 618-final

./: .gitignore  CMakeLists.txt  README.md  _config.yml
doc/: Makefile  checkpoint.md  checkpoint_meta.md  final.md  final_meta.md  proposal.md  proposal_meta.md
include/: boost_adapter.h  cas_queue.h  coarse_lock_queue.h  config.h  distributed_queue.h  fine_lock_queue.h  free_list.h  free_list_adapter.h  lock_free_allocator.h  lock_queue.h  queue.h  rtm_queue.h  tm_queue.h
pages/: proposal.html
result/: align_cacheline.csv  distributed_comp.csv  no_optimization.csv  plot.py  plot_opt.py  use_jemalloc.csv  use_jemalloc_and_align_cacheline.csv
scripts/: plot.py  result.csv
src/: main.cc  test.cc
test/: sample_test.cc
